--- a/index.html
+++ b/index.html
@@ -2,131 +2,169 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Private Experience</title>
+<title>Private World</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600&display=swap" rel="stylesheet">
+
+<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
 
 <style>
+* {
+    box-sizing: border-box;
+}
+
 body {
     margin: 0;
     font-family: 'Orbitron', sans-serif;
-    background: #0b0b0f;
-    color: #ffffff;
+    background: #05050a;
+    color: white;
+    overflow-x: hidden;
 }
 
 .hero {
     min-height: 100vh;
-    background: linear-gradient(rgba(5,5,10,0.85), rgba(5,5,10,0.95)),
-    url("pexels-designecologist-887349.jpg") center/cover no-repeat;
+    background:
+        linear-gradient(135deg, rgba(10,0,20,0.9), rgba(0,0,0,0.95)),
+        url("pexels-designecologist-887349.jpg") center/cover no-repeat;
     display: flex;
     align-items: center;
     justify-content: center;
-    text-align: center;
     padding: 40px;
 }
 
 .hero-content {
-    max-width: 800px;
+    max-width: 1000px;
+    width: 100%;
+    display: flex;
+    gap: 40px;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
-.hero h1 {
-    font-size: 3rem;
+.hero-text {
+    max-width: 500px;
+}
+
+.hero-text h1 {
+    font-size: 3.5rem;
+    color: #ff0055;
+    text-shadow: 0 0 20px #ff0055;
     margin-bottom: 20px;
-    color: #00f7ff;
 }
 
-.hero p {
+.hero-text p {
     font-size: 1.2rem;
     color: #ccc;
-    line-height: 1.6;
+    line-height: 1.7;
 }
 
-.btn-main {
+.hero-text .enter-btn {
+    margin-top: 40px;
     display: inline-block;
-    margin-top: 30px;
-    padding: 15px 40px;
-    background: #00f7ff;
-    color: #000;
+    padding: 16px 40px;
+    border: 2px solid #ff0055;
+    color: #ff0055;
     text-decoration: none;
     font-size: 1.1rem;
-    border-radius: 30px;
+    border-radius: 50px;
     transition: 0.3s;
+    box-shadow: 0 0 20px rgba(255,0,85,0.4);
 }
 
-.btn-main:hover {
-    background: #0ff;
-    transform: scale(1.05);
+.hero-text .enter-btn:hover {
+    background: #ff0055;
+    color: black;
+    box-shadow: 0 0 40px rgba(255,0,85,0.8);
+}
+
+.glow-box {
+    width: 350px;
+    height: 350px;
+    background: radial-gradient(circle, rgba(255,0,85,0.6), rgba(0,0,0,0));
+    filter: blur(40px);
+    animation: pulse 4s infinite alternate;
+}
+
+@keyframes pulse {
+    from { opacity: 0.4; }
+    to { opacity: 1; }
 }
 
 .section {
-    padding: 80px 20px;
+    padding: 100px 20px;
+    background: #06060c;
     text-align: center;
 }
 
 .section h2 {
-    font-size: 2.5rem;
+    font-size: 3rem;
     color: #00f7ff;
-    margin-bottom: 50px;
+    text-shadow: 0 0 20px #00f7ff;
+    margin-bottom: 60px;
 }
 
-.experiences {
+.cards {
     display: flex;
     justify-content: center;
-    gap: 40px;
+    gap: 50px;
     flex-wrap: wrap;
 }
 
 .card {
-    background: #12121a;
-    border-radius: 20px;
-    padding: 40px 30px;
-    max-width: 350px;
-    box-shadow: 0 0 20px rgba(0,247,255,0.1);
-    transition: 0.3s;
+    background: rgba(20,20,40,0.9);
+    border: 1px solid rgba(0,247,255,0.2);
+    border-radius: 25px;
+    padding: 50px 40px;
+    width: 340px;
+    backdrop-filter: blur(10px);
+    box-shadow: 0 0 40px rgba(0,247,255,0.1);
+    transition: 0.4s;
 }
 
 .card:hover {
-    transform: translateY(-10px);
-    box-shadow: 0 0 30px rgba(0,247,255,0.3);
+    transform: translateY(-15px) scale(1.05);
+    box-shadow: 0 0 60px rgba(0,247,255,0.5);
 }
 
 .card h3 {
-    font-size: 1.8rem;
-    color: #fff;
+    font-size: 2rem;
     margin-bottom: 20px;
+    color: white;
 }
 
 .card p {
-    color: #aaa;
+    color: #bbb;
     line-height: 1.6;
 }
 
 .card a {
     display: inline-block;
     margin-top: 30px;
-    padding: 12px 30px;
+    padding: 14px 40px;
+    border-radius: 40px;
     background: transparent;
     border: 2px solid #00f7ff;
     color: #00f7ff;
     text-decoration: none;
-    border-radius: 30px;
     transition: 0.3s;
+    box-shadow: 0 0 20px rgba(0,247,255,0.3);
 }
 
 .card a:hover {
     background: #00f7ff;
-    color: #000;
+    color: black;
+    box-shadow: 0 0 40px rgba(0,247,255,0.8);
 }
 
 .trust {
-    margin-top: 60px;
+    margin-top: 80px;
     color: #777;
-    font-size: 0.95rem;
+    font-size: 0.9rem;
 }
 
 .trust span {
+    margin: 15px;
     display: inline-block;
-    margin: 10px 15px;
 }
 </style>
 </head>
@@ -135,25 +173,28 @@ body {
 
 <div class="hero">
     <div class="hero-content">
-        <h1>A New Way to Experience Adult Connections</h1>
-        <p>
-            Step into a private digital world designed for adults who want something more real,
-            more exciting, and more discreet than public platforms.
-        </p>
-        <a href="#choose" class="btn-main">Enter the Experience</a>
+        <div class="hero-text">
+            <h1>Enter a Private Digital World</h1>
+            <p>
+                A discreet space designed for adults who want something deeper,
+                more intense, and more exclusive than public platforms.
+            </p>
+            <a href="#experiences" class="enter-btn">Enter Now</a>
+        </div>
+        <div class="glow-box"></div>
     </div>
 </div>
 
-<div class="section" id="choose">
+<div class="section" id="experiences">
     <h2>Choose Your Experience</h2>
 
-    <div class="experiences">
+    <div class="cards">
 
         <div class="card">
-            <h3>Live Interaction Experience</h3>
+            <h3>Live Experience</h3>
             <p>
-                Designed for people who enjoy fast-paced, real-time moments
-                in a private digital environment.
+                Built for people who enjoy fast-paced, real-time moments
+                inside a private digital environment.
             </p>
             <a href="https://t.acrsmartcam.com/399431/6973?bo=2779,2778,2777,2776,2775&aff_sub5=SF_006OG000004lmDN" target="_blank">
                 Continue
@@ -161,10 +202,10 @@ body {
         </div>
 
         <div class="card">
-            <h3>Modern Social Experience</h3>
+            <h3>Modern Experience</h3>
             <p>
-                A next-generation platform for adults who want something more modern,
-                smoother, and more immersive.
+                A next-generation platform designed for adults who want a smoother,
+                more immersive and modern digital experience.
             </p>
             <a href="https://t.acrsmartcam.com/399431/7984?bo=2779,2778,2777,2776,2775&aff_sub5=SF_006OG000004lmDN" target="_blank">
                 Explore
@@ -175,13 +216,12 @@ body {
 
     <div class="trust">
         <span>Adults Only</span>
-        <span>Private Environment</span>
+        <span>Private Access</span>
         <span>No Fake Profiles</span>
-        <span>Discreet Access</span>
+        <span>Discreet Environment</span>
         <span>Secure Platform</span>
     </div>
 </div>
 
 </body>
 </html>
-
