--- a/index.html
+++ b/index.html
@@ -8,219 +8,196 @@
 <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
 
 <style>
-* {
-    box-sizing: border-box;
-}
+* { box-sizing: border-box; }
 
 body {
-    margin: 0;
-    font-family: 'Orbitron', sans-serif;
-    background: #05050a;
-    color: white;
-    overflow-x: hidden;
+  margin: 0;
+  font-family: 'Orbitron', sans-serif;
+  background: #05050a;
+  color: white;
 }
 
 .hero {
-    min-height: 100vh;
-    background:
-        linear-gradient(135deg, rgba(10,0,20,0.9), rgba(0,0,0,0.95)),
-        url("pexels-designecologist-887349.jpg") center/cover no-repeat;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 40px;
+  min-height: 100vh;
+  background:
+    linear-gradient(135deg, rgba(20,0,10,0.9), rgba(0,0,0,0.95)),
+    url("pexels-designecologist-887349.jpg") center/cover no-repeat;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 40px;
 }
 
 .hero-content {
-    max-width: 1000px;
-    width: 100%;
-    display: flex;
-    gap: 40px;
-    align-items: center;
-    justify-content: space-between;
-    flex-wrap: wrap;
+  max-width: 1000px;
+  width: 100%;
+  display: flex;
+  gap: 40px;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
-.hero-text {
-    max-width: 500px;
-}
+.hero-text { max-width: 500px; }
 
 .hero-text h1 {
-    font-size: 3.5rem;
-    color: #ff0055;
-    text-shadow: 0 0 20px #ff0055;
-    margin-bottom: 20px;
+  font-size: 3.5rem;
+  color: #ff003c;
+  text-shadow: 0 0 25px #ff003c;
 }
 
 .hero-text p {
-    font-size: 1.2rem;
-    color: #ccc;
-    line-height: 1.7;
+  font-size: 1.2rem;
+  color: #ccc;
+  line-height: 1.7;
 }
 
 .hero-text .enter-btn {
-    margin-top: 40px;
-    display: inline-block;
-    padding: 16px 40px;
-    border: 2px solid #ff0055;
-    color: #ff0055;
-    text-decoration: none;
-    font-size: 1.1rem;
-    border-radius: 50px;
-    transition: 0.3s;
-    box-shadow: 0 0 20px rgba(255,0,85,0.4);
+  margin-top: 40px;
+  display: inline-block;
+  padding: 16px 40px;
+  border: 2px solid #ff003c;
+  color: #ff003c;
+  text-decoration: none;
+  border-radius: 50px;
+  box-shadow: 0 0 30px rgba(255,0,60,0.6);
+  transition: 0.3s;
 }
 
 .hero-text .enter-btn:hover {
-    background: #ff0055;
-    color: black;
-    box-shadow: 0 0 40px rgba(255,0,85,0.8);
+  background: #ff003c;
+  color: black;
+  box-shadow: 0 0 50px rgba(255,0,60,1);
 }
 
 .glow-box {
-    width: 350px;
-    height: 350px;
-    background: radial-gradient(circle, rgba(255,0,85,0.6), rgba(0,0,0,0));
-    filter: blur(40px);
-    animation: pulse 4s infinite alternate;
+  width: 350px;
+  height: 350px;
+  background: radial-gradient(circle, rgba(255,0,60,0.7), rgba(0,0,0,0));
+  filter: blur(40px);
+  animation: pulse 4s infinite alternate;
 }
 
 @keyframes pulse {
-    from { opacity: 0.4; }
-    to { opacity: 1; }
+  from { opacity: 0.4; }
+  to { opacity: 1; }
 }
 
 .section {
-    padding: 100px 20px;
-    background: #06060c;
-    text-align: center;
+  padding: 100px 20px;
+  background: #06060c;
+  text-align: center;
 }
 
 .section h2 {
-    font-size: 3rem;
-    color: #00f7ff;
-    text-shadow: 0 0 20px #00f7ff;
-    margin-bottom: 60px;
+  font-size: 3rem;
+  color: #ff003c;
+  text-shadow: 0 0 30px #ff003c;
 }
 
 .cards {
-    display: flex;
-    justify-content: center;
-    gap: 50px;
-    flex-wrap: wrap;
+  display: flex;
+  justify-content: center;
+  gap: 50px;
+  flex-wrap: wrap;
+  margin-top: 60px;
 }
 
 .card {
-    background: rgba(20,20,40,0.9);
-    border: 1px solid rgba(0,247,255,0.2);
-    border-radius: 25px;
-    padding: 50px 40px;
-    width: 340px;
-    backdrop-filter: blur(10px);
-    box-shadow: 0 0 40px rgba(0,247,255,0.1);
-    transition: 0.4s;
+  background: rgba(20,10,20,0.95);
+  border: 1px solid rgba(255,0,60,0.4);
+  border-radius: 25px;
+  padding: 50px 40px;
+  width: 340px;
+  box-shadow: 0 0 40px rgba(255,0,60,0.3);
+  transition: 0.4s;
 }
 
 .card:hover {
-    transform: translateY(-15px) scale(1.05);
-    box-shadow: 0 0 60px rgba(0,247,255,0.5);
+  transform: translateY(-15px) scale(1.05);
+  box-shadow: 0 0 70px rgba(255,0,60,0.8);
 }
 
 .card h3 {
-    font-size: 2rem;
-    margin-bottom: 20px;
-    color: white;
+  font-size: 2rem;
+  color: white;
 }
 
 .card p {
-    color: #bbb;
-    line-height: 1.6;
+  color: #bbb;
+  line-height: 1.6;
 }
 
 .card a {
-    display: inline-block;
-    margin-top: 30px;
-    padding: 14px 40px;
-    border-radius: 40px;
-    background: transparent;
-    border: 2px solid #00f7ff;
-    color: #00f7ff;
-    text-decoration: none;
-    transition: 0.3s;
-    box-shadow: 0 0 20px rgba(0,247,255,0.3);
+  display: inline-block;
+  margin-top: 30px;
+  padding: 14px 40px;
+  border-radius: 40px;
+  border: 2px solid #ff003c;
+  color: #ff003c;
+  text-decoration: none;
+  box-shadow: 0 0 30px rgba(255,0,60,0.6);
+  transition: 0.3s;
 }
 
 .card a:hover {
-    background: #00f7ff;
-    color: black;
-    box-shadow: 0 0 40px rgba(0,247,255,0.8);
+  background: #ff003c;
+  color: black;
+  box-shadow: 0 0 50px rgba(255,0,60,1);
 }
 
 .trust {
-    margin-top: 80px;
-    color: #777;
-    font-size: 0.9rem;
+  margin-top: 80px;
+  color: #666;
+  font-size: 0.9rem;
 }
-
-.trust span {
-    margin: 15px;
-    display: inline-block;
-}
+.trust span { margin: 15px; display: inline-block; }
 </style>
 </head>
 
 <body>
 
 <div class="hero">
-    <div class="hero-content">
-        <div class="hero-text">
-            <h1>Enter a Private Digital World</h1>
-            <p>
-                A discreet space designed for adults who want something deeper,
-                more intense, and more exclusive than public platforms.
-            </p>
-            <a href="#experiences" class="enter-btn">Enter Now</a>
-        </div>
-        <div class="glow-box"></div>
+  <div class="hero-content">
+    <div class="hero-text">
+      <h1>Enter a Private Digital World</h1>
+      <p>
+        A discreet space designed for adults who want something deeper,
+        more intense, and more exclusive than public platforms.
+      </p>
+      <a href="#experiences" class="enter-btn">Enter Now</a>
     </div>
+    <div class="glow-box"></div>
+  </div>
 </div>
 
 <div class="section" id="experiences">
-    <h2>Choose Your Experience</h2>
+  <h2>Choose Your Experience</h2>
 
-    <div class="cards">
-
-        <div class="card">
-            <h3>Live Experience</h3>
-            <p>
-                Built for people who enjoy fast-paced, real-time moments
-                inside a private digital environment.
-            </p>
-            <a href="https://t.acrsmartcam.com/399431/6973?bo=2779,2778,2777,2776,2775&aff_sub5=SF_006OG000004lmDN" target="_blank">
-                Continue
-            </a>
-        </div>
-
-        <div class="card">
-            <h3>Modern Experience</h3>
-            <p>
-                A next-generation platform designed for adults who want a smoother,
-                more immersive and modern digital experience.
-            </p>
-            <a href="https://t.acrsmartcam.com/399431/7984?bo=2779,2778,2777,2776,2775&aff_sub5=SF_006OG000004lmDN" target="_blank">
-                Explore
-            </a>
-        </div>
-
+  <div class="cards">
+    <div class="card">
+      <h3>Live Experience</h3>
+      <p>Fast-paced real-time private moments.</p>
+      <a href="https://t.acrsmartcam.com/399431/6973?bo=2779,2778,2777,2776,2775&aff_sub5=SF_006OG000004lmDN" target="_blank">
+        Continue
+      </a>
     </div>
 
-    <div class="trust">
-        <span>Adults Only</span>
-        <span>Private Access</span>
-        <span>No Fake Profiles</span>
-        <span>Discreet Environment</span>
-        <span>Secure Platform</span>
+    <div class="card">
+      <h3>Modern Experience</h3>
+      <p>Smoother, immersive next-generation platform.</p>
+      <a href="https://t.acrsmartcam.com/399431/7984?bo=2779,2778,2777,2776,2775&aff_sub5=SF_006OG000004lmDN" target="_blank">
+        Explore
+      </a>
     </div>
+  </div>
+
+  <div class="trust">
+    <span>Adults Only</span>
+    <span>Private</span>
+    <span>No Fake Profiles</span>
+    <span>Secure</span>
+  </div>
 </div>
 
 </body>
