--- a/index.html
+++ b/index.html
@@ -50,6 +50,25 @@
         </a>
       </div>
 
+      <!-- Offer 3: Xcams -->
+      <div class="card">
+        <h2>Xcams – Premium Live Cam Platform</h2>
+        <p>
+          Xcams is a premium live cam platform featuring thousands of verified models from around the world.
+          With hundreds of performers online at any time, multilingual accessibility, and strong presence
+          across major European markets, it delivers a smooth, high-quality, and engaging live experience
+          designed for users seeking authenticity and premium performance.
+        </p>
+        <a
+          href="https://t.acrsmartcam.com/399431/6973?bo=2779,2778,2777,2776,2775&aff_sub5=SF_006OG000004lmDN"
+          class="btn"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          Discover Xcams
+        </a>
+      </div>
+
     </div>
   </section>
 
