--- a/index.html
+++ b/index.html
@@ -32,21 +32,21 @@
         </a>
       </div>
 
-      <!-- Offer 2: FILF -->
+      <!-- Offer 2: Live Jasmin -->
       <div class="card">
-        <h2>FILF – Premium Gay Live Platform</h2>
+        <h2>Live Jasmin — Premium Live Video Chat Platform</h2>
         <p>
-          FILF is a premium gay live platform offering a polished and user-friendly viewing experience.
-          The platform is built with a clean design and reliable performance, ideal for users looking
-          for a high-quality and immersive live entertainment experience.
+          Live Jasmin is a premium live video chat platform offering high-quality streaming,
+          a wide selection of models, and an engaging interactive experience for users seeking
+          top-tier live entertainment.
         </p>
         <a
-          href="https://t.acrsmartcam.com/399431/8873/0?bo=2779,2778,2777,2776,2775&po=6533&aff_sub5=SF_006OG000004lmDN"
+          href="https://t.acrsmartcam.com/399431/7070?bo=2779,2778,2777,2776,2775&aff_sub5=SF_006OG000004lmDN"
           class="btn"
           target="_blank"
           rel="noopener noreferrer"
         >
-          Discover FILF
+          Discover Live Jasmin
         </a>
       </div>
 
